trunk/Archive2/d0/29f9f3f78b74a3/output
main.cpp:2:11: error: use of undeclared identifier 'a'
    (int)(a)=0;
          ^
1 error generated.
